Ostatnie szlify przed wprowadzaniem GUI, jak na razie działają funkcje sklepu, wszystko związane z obserwatorem czystości wybiegów. Niesprawdzone jest jeszcze jedzenie i głód zwierząt. Trzeba dorobić metodę do sprzedawania zwierząt z wybiegu dla bezdomnych